[tool.poetry]
name = "openmldb-docs"
version = "0.6.0"
description = "OpenMLDB Documents"
authors = ["4Paradigm Authors <teapot@aceforeverd.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.4.2"
mkdocs = {extras = ["i18n"], version = "^1.3.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
